# heimdallr

./: .cursorrules  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
src/wildfire/: device.py  losses.py  model.py  train.py
src/wildfire/data/: __init__.py  constants.py  dataset.py  normalize.py  reader.py  splits.py
src/wildfire/data/proto/: __init__.py  example.proto  example_pb2.py  example_pb2.pyi
tests/: test_device.py  test_losses.py  test_model.py  test_train.py  test_wildfire.py
tests/data/: synthetic.py
