[project]
name = "wildfire"
version = "0.1.0"
description = "Next-day wildfire spread forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "protobuf>=5.0",
    "torch>=2.6",
]

[dependency-groups]
dev = [
    "black>=24.0",
    "grpcio-tools>=1.60",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wildfire"]

[tool.uv]
# Prefer native Apple Silicon wheels when resolving dependencies.
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Generated protobuf stubs contain long serialized descriptor strings.
"src/wildfire/data/proto/*_pb2.py" = ["E501"]
"src/wildfire/data/proto/*_pb2.pyi" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
